# forca-command-grid

./: .dockerignore  .env.example  .gitignore  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: FUNDING.yml  dependabot.yml
config/: asgi.py  celery.py  showcase_data.py  urls.py  views.py  wsgi.py
core/: audit.py  context.py  exporting.py  features.py  freshness.py  middleware.py  mixins.py  netcap.py  pilots.py  rbac.py  redirects.py  version.py
deploy/: README.md  deploy-ubuntu-26.04.sh  stamp-version.sh  verify-prod.sh
frontend/: README.md  app.css  package.json  tailwind.config.js  vendor.js
handbooks/: README.md  configuration-reference.md  data-and-privacy.md  feature-catalog.md  glossary.md  permissions-and-roles.md  product-overview.md  third-party-services.md
locale/: .gitkeep
scripts/: backup.sh  bootstrap-data.sh  cert-init.sh  create-admin.sh  healthcheck.sh  lib.sh  restore.sh  rollback.sh  tochas_lab_differential_pyfa.py  tochas_lab_extract_fixture.py  tochas_lab_graph_smoke.py  tochas_lab_repro.py  update.sh  wait-for-services.sh
templates/: _impersonation_banner.html  _nav.html  _pilot_identity.html  _pilot_selector.html  _user_block.html  base.html  landing.html  showcase.html
tests/: _campaign_utils.py  _capsuleer_utils.py  _fitting_graph_utils.py  _fitting_utils.py  _raffle_utils.py  conftest.py  (+409 more)
(+1443 files in other folders)
